--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
       <meta name="description" content="Jigsaw puzzle" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&family=DynaPuff:wght@400;500;600;700&family=Permanent+Marker&display=swap"
+         rel="stylesheet"
+      />
       <title>Puzzle</title>
    </head>
    <body>
