--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
          rel="stylesheet"
       />
       <title>Puzzle</title>
+
+      <!-----------------------------------------------------------------------
+      "Headbreaker", Jigsaw puzzles framework for JavaScript         
+        Framework Developer : https://github.com/flbulgarelli/headbreaker          
+        ISC License
+        Copyright (c) 2020-2022, Franco Leonado Bulgarelli -->
+      <script src="https://flbulgarelli.github.io/headbreaker/js/headbreaker.js"></script>
+      <!----------------------------------------------------------------------->
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
