--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
    <head>
       <meta charset="utf-8" />
+      <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
       <meta name="description" content="Jigsaw puzzle" />
@@ -11,7 +12,9 @@
          href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&family=DynaPuff:wght@400;500;600;700&family=Permanent+Marker&display=swap"
          rel="stylesheet"
       />
-      <title>Puzzle</title>
+      <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+
+      <title>Jigsaw puzzle</title>
 
       <!-----------------------------------------------------------------------
       "Headbreaker", Jigsaw puzzles framework for JavaScript         
